# bias-bot

./: .gitignore  Cargo.toml  anime.yaml
src/: error.rs  lib.rs  main.rs
src/data/: config.rs  cpu.rs  database.rs  database.sql  mod.rs  queries.sql  user.rs
src/discord/: bot.rs
